# spray_robot-src

./: README.md
execution/arm_command/: package.xml  setup.cfg  setup.py
execution/motion_coordinator/: package.xml  setup.py
execution/slider_command/: package.xml  setup.cfg  setup.py
gazebo_sim/: package.xml  setup.cfg  setup.py
gazebo_sim/meshes/: ship_hull.STL
gazebo_sim/worlds/: spray_lidar_world.sdf
hmi/hmi_backend/: package.xml  setup.cfg  setup.py
hmi/hmi_msgs/: package.xml  setup.cfg  setup.py
perception/environment_model/: package.xml
perception/pointcloud2mesh/: CMakeLists.txt  README.md  package.xml  setup.cfg
perception/pointcloud2mesh/launch/: cloud_to_mesh_server.launch.py
perception/pointcloud2mesh/src/: cloud_to_mesh_server.cpp
perception/pointcloud2mesh/srv/: SaveMesh.srv
perception/pointcloud_fusion/: package.xml  setup.cfg  setup.py
perception/pointcloud_fusion/launch/: fusion_node.launch.py
perception/pointcloud_fusion/pointcloud_fusion/: fusion_node.py  fusion_node2.py
perception/pointcloud_preprocess/: package.xml  setup.py
perception/workplane_4points/: setup.py
planning/collision_check/: package.xml  setup.py
planning/motion_planner/: package.xml
planning/reachability_check/: setup.cfg  setup.py
planning/spray_path_planner/: package.xml  setup.cfg  setup.py
sensor/camera_bridge/: package.xml
sensor/lidar_driver/: setup.py
sensor/range_sensor_driver/: package.xml  setup.cfg  setup.py
sensor/sensor_fusion/: package.xml  setup.py
spray_robot_bringup/: package.xml  setup.cfg  setup.py
spray_robot_bringup/launch/: spray_sim.launch.py
spray_robot_bringup/spray_robot_bringup/: spray_sim_bringup.py
spray_robot_description/: package.xml  setup.cfg  setup.py
spray_robot_interfaces/: CMakeLists.txt  package.xml
spray_robot_interfaces/action/: SprayBlock.action
spray_robot_interfaces/msg/: BlockStatus.msg  SprayPath.msg  SprayPose.msg
spray_sim/: bringup_spray_sim.sh  package.xml  setup.cfg  setup.py
spray_sim/rviz/: spray.rviz
spray_sim/worlds/: spray_lidar_world.sdf  spray_lidar_world_simple.sdf
task/block_manager/: package.xml  setup.cfg  setup.py
task/task_manager/: package.xml  setup.py
vehicle_interface/vehicle_comm/: package.xml  setup.cfg  setup.py
