<?xml version="1.0"?>
<package format="3">
  <name>spray_robot_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces (msg/srv/action) for spray robot system.</description>

  <maintainer email="lao@todo.todo">lao</maintainer>
  <license>MIT</license>

  <!-- Build toolchain -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Interface dependencies used in .msg/.srv/.action -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>

  <!-- Runtime for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark this package as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Tests / Lint (recommended) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>
